[package]
name = "namespaced-tmp"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = { version = "1.2.1", optional = true }

[dependencies.tokio]
version = "1"
default-features = false
features = ["fs"]
optional = true

[features]
user = ["whoami"]
async = ["tokio"]
